Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjObjectField.quorum
class Main
    Object v
    action Main
        v:SetValue()
        Test(v)
    end

    action Test(Integer var)
    end
end
